fix emoji alignment

--- a/src/features/messages/send/message-body-input.module.scss
+++ b/src/features/messages/send/message-body-input.module.scss
@@ -1,17 +1,21 @@
 @use '@styles/colors';
 
 .input {
-  width: 100%;
-  max-width: 100%;
+  flex-grow: 1;
   padding: 12px 0px;
-  caret-color: colors.$white;
+  caret-color: colors.$text-primary;
   color: colors.$text-primary;
   overflow-wrap: break-word;
   word-wrap: break-word;
   white-space: pre-wrap;
   line-height: 1.375rem;
+  font-size: 16px;
 
   &:focus, &:focus-visible {
     outline: none;
+  }
+
+  & > div[data-slate-node="element"] {
+    height: 22px;
   }
 }
